# pygrunn-demo

./: .env  .gitignore  LICENSE  README.md  compose.yml  pyproject.toml
docker/pgadmin/: servers.json
docker/postgres/init-scripts/: 01-create-tables.sql
docker/python/: Dockerfile
docker/redis-commander/: Dockerfile
src/cdc_demo/: config.py
src/cdc_demo/model/: subscription.py  subscription_statistic.py
src/cdc_demo/sink_service/: app.py
src/cdc_demo/statistic_service/: app.py
src/cdc_demo/subscription_service/: app.py
